# baba_is_you

./: .gitignore  01-TBE.vcxproj  Audio.cpp  Audio.h  CMakeLists (copia).txt  CMakeLists.txt  CMakeListsLinux.txt  CreditsNames.cpp  CreditsNames.h  CreditsScene.cpp  CreditsScene.h  Game.cpp  Game.h  InstructionsScene.cpp  InstructionsScene.h  LevelController.cpp  LevelController.h  LevelScene.cpp  LevelScene.h  MapObject.cpp  MapObject.h  MenuScene.cpp  MenuScene.h  Player.cpp  README.md  Scene.cpp  Scene.h  Shader.cpp  Sprite.cpp  Texture.cpp  TileMap.cpp  TileMap.h  Words.cpp  Words.h  info.txt  main.cpp
build (copia)/: CMakeCache.txt  cmake_install.cmake
include/irrKlang/examples/01.HelloWorld/: example
levels/: credits.txt  instructions.txt  level01.txt  level02.txt  level03.txt  level04.txt  level05.txt  lvl_1_setup.txt  lvl_2_setup.txt  lvl_3_setup.txt  lvl_4_setup.txt  lvl_5_setup.txt  main_menu.xcf  menu.txt  test.txt  wallslvl5
levels_tiled/: baba.tsx  bricks.tsx  coldwatergrass.tsx  ice.tsx  instructions.tmx  lava.tsx  level01.tmx  level01.tsx  level02.tmx  level03.tmx  level04.tmx  level05.tmx  level1pkm.tsx  redsandwater.tsx  test.tsx  walls.tsx  walls2.tsx  wheat.tsx
